--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
             </ul>
         </footer>
     </div>
+    <span>Mensaje nuevo</span>
     <script src="script.js"></script>
 </body>
 </html>
